# ESP32-SPEAKER

./: README.md
audiostream-host/: .gitignore  Makefile  app  data.pcm  data1.pcm  main.cpp  main.cpp-rpc  main.cpp__esp32_1  main.cpp__esp32c3gai  main.cpp_esp32_2  main.cpp_yuan
esp-player-sink/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
esp-player-sink/components/.protobuf-c-rpc/: CMakeLists.txt
esp-player-sink/components/.protobuf-c-rpc/proto_src/: esp_audiotest.pb-c.c  esp_audiotest.pb-c.h
esp-player-sink/components/ability_framework/: CMakeLists.txt  ability_conext.hpp  ability_context.cpp  api_AbilityRequest_handler.cpp  api_AbilityRunning_handler.cpp  api_AbilitySupport_handler.cpp  api_Devices_handler.cpp  hello_handler.cpp
esp-player-sink/components/components/opus/: CMakeLists.txt
esp-player-sink/components/mic_driver/: CMakeLists.txt  mic_driver.cpp  mic_driver.hpp
esp-player-sink/components/opus/: CMakeLists.txt  component.mk
esp-player-sink/components/speaker_driver/: CMakeLists.txt  speaker_driver.cpp  speaker_driver.hpp
esp-player-sink/components/udp_broadcast/: udp_broadcast.c
esp-player-sink/components/wifi_config/: config_wifi.c  config_wifi.h
esp-player-sink/main/: CMakeLists.txt  hello_world_main.c  hello_world_main.c__esp32_1  hello_world_main.c_esp32c3_2  hello_world_main.cpp
